fix: AccountBookings toggle on mobile

--- a/src/views/account/pages/AccountBookingsPage.module.sass
+++ b/src/views/account/pages/AccountBookingsPage.module.sass
@@ -12,7 +12,7 @@
 	background: #F9F9F9
 	padding: 4px
 	border-radius: 6px
-	display: flex
+	display: none
 	flex-wrap: wrap
 	align-items: center
 	gap: 4px
@@ -45,3 +45,7 @@
 @media (max-width: 768px)
 	.grid
 		grid-template-columns: 1fr
+
+@media (max-width: 600px)
+	.toggle
+		display: flex
